/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    java
    id("com.github.johnrengelman.shadow") version "7.1.0"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("net.dv8tion:JDA:5.0.0-alpha.2")
    implementation("com.google.code.gson:gson:2.8.9")
    implementation("org.slf4j:slf4j-jdk14:1.7.32")
    implementation("org.mongodb:mongo-java-driver:3.12.10")
}

group = "me.kannacoco.kannabotto"
version = "1.0"
description = "KannaBotto"

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks {
    jar {
        manifest.attributes["Main-Class"] = "me.kannacoco.kannabotto.Bot"
    }
    shadowJar {
        manifest.attributes["Main-Class"] = "me.kannacoco.kannabotto.Bot"
    }
    build {
        dependsOn(shadowJar)
    }
}
